--- a/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
@@ -11,7 +11,7 @@
         <style type="text/css">
             .ui-diagram-task {
                 background-color: #9ed4ef;
-                width:12em;
+                width:14em;
                 height:6em;
             }
 
@@ -38,21 +38,27 @@
             }
 
             .ui-diagram-start {
-                width:6em;
+                width:3em;
+                height:3em;
+                background-color: #edef04;
+            }
+
+            .ui-diagram-exit {
+                width:3em;
                 height:3em;
                 border-radius: 3em;
-                background-color: #edef04;
+                background-color: #000000;
             }
 
             .ui-diagram-success-state {
                 width:10em;
-                height:6em;
+                height:5em;
                 background-color: #02b044;
             }
 
             .ui-diagram-fail-state {
                 width:10em;
-                height:6em;
+                height:5em;
                 background-color: #C33730;
             }
 
