--- a/escom-bpm-web/src/main/webapp/view/staffs/posts/post-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/posts/post-card.xhtml
@@ -11,7 +11,7 @@
           <p:tab id="cardTab" title="#{bundle.Explorer}">     
             <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12"
                          columnClasses="ui-grid-col-12">
-                <p:outputLabel value="#{bundle.Name}" />
+                <p:outputLabel value="#{bundle.Name}" indicateRequired="true" />
                     <p:inputText id="nameItem" value="#{_bean.editedItem.name}" 
                                  styleClass="ui-grid-col-12 col-padding"
                                  onkeypress="checkEsc(#{_bean.cancelBtnName});"
