--- a/escom-bpm-web/src/main/webapp/view/sys/activate.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/activate.xhtml
@@ -5,7 +5,7 @@
                 template="/view/templ/templ.xhtml">
 
     <ui:define name="title">
-        #{bundle.ProgramName} #{bundle.Activate}
+        #{bundle.ProgramName} #{bundle.ActivateLicense}
     </ui:define>
 
     <ui:define name="systems">
@@ -89,7 +89,7 @@
                         <h:outputLabel value="#{msg.ComputerMastConnectToInternet}" />
                         <p:spacer/><p:spacer/>
                         <p:spacer/>
-                        <p:commandButton id="btnLogin" value="#{bundle.Activate}"
+                        <p:commandButton id="btnLogin" value="#{bundle.Activate}" title="#{bundle.ActivateLicense}"
                                          actionListener="#{activateAppBean.onActivate()}"/>
                     </p:panelGrid>
                 </p:panelGrid>
