--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -134,7 +134,7 @@
                             </f:facet>
                         </p:menubar>
 
-                        <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" dynamic="true" cache="true">
+                        <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" >
                             <ui:insert name="page_body"/>
                             <ui:include src="/view/common/dict-rights.xhtml"/>
                             <ui:insert name="childs_rights"/>
